bookmark, blog 콘텐츠 편집 기능까지

--- a/marker/templates/marker/marker_detail.html
+++ b/marker/templates/marker/marker_detail.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}marker_detail.html{% endblock %}
+
+{% block content %}
+    <h1>{{ object.title }}</h1>
+
+    <ul>
+        <li>URL: <a href="{{ object.url }}">{{ object.url }}</a></li>
+    </ul>
+{% endblock %}
