--- a/blog/templates/blog/post_archive_day.html
+++ b/blog/templates/blog/post_archive_day.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}post_archive_day.html{% endblock %}
+
+{% block content %}
+<h1>Post Archives for {{ day|date:"N d, Y" }}</h1>
+<br><br>
+
+<div>
+    <ul>
+        {% for post in object_list %}
+        <li class="h5">
+            {{ post.modify_dt|date:"Y-m-d" }}&emsp;
+        <a href="{{ post.get_absolute_url }}"><strong>{{ post.title }}</strong></a></li>
+        {% endfor %}
+    </ul>
+</div>
+{% endblock %}
