--- a/blog/templates/blog/post_archive_year.html
+++ b/blog/templates/blog/post_archive_year.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}post_archive_year.html{% endblock %}
+
+{% block content %}
+<h1>Post Archives for {{ year|date:"Y" }}</h1>
+
+    {% for date in date_list %}
+        <a href="{% url 'blog:post_month_archive' year|date:'Y' date|date:'b' %}"
+           class="btn btn-primary btn-sm mx-1">
+           {{ date|date:"F" }}</a>
+    {% endfor %}
+
+<br><br>
+
+<div>
+    <ul>
+        {% for post in object_list %}
+        <li class="h5">
+            {{ post.modify_dt|date:"Y-m-d" }}&emsp;
+        <a href="{{ post.get_absolute_url }}"><strong>{{ post.title }}</strong></a></li>
+        {% endfor %}
+    </ul>
+</div>
+{% endblock %}
