--- a/marker/templates/marker/marker_list.html
+++ b/marker/templates/marker/marker_list.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}marker_list.html{% endblock %}
+
+{% block content %}
+    <h1>Bookmark List</h1>
+    <br>
+
+    <ul>
+        {% for marker in object_list %}
+            <li><a href="{% url 'marker:detail' marker.id %}">{{ marker }}</a></li>
+        {% endfor %}
+    </ul>
+{% endblock %}
