--- a/photo/templates/photo/album_detail.html
+++ b/photo/templates/photo/album_detail.html
@@ -1,10 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}album_detail.html{% endblock %}
+
+{% block extra-style %}
+<style>
+    thumbnail {
+    border: 5px solid #ccc;
+    }
+</style>
+{% endblock %}
+
+{% block content %}
+<div class="mt-5">
+    <span class="h2">{{ object.name }}&emsp;</span>
+    <span class="h5 font-italic">{{ object.description }}</span>
+</div>
+
+<hr style="margin: 0 0 20px 0;">
+
+<div class="row">
+    {% for photo in object.photo_set.all %}
+    <div class="col-md-3 md-5">
+        <div class="thumbnail">
+            <a href="{{ photo.get_absolute_url }}">
+                <img src = "{{ photo.image.thumb_url }}" style="width: 100%;">
+            </a>
+        </div>
+        <ul>
+            <li class="font-italic">{{ photo.title }}</li>
+            <li class="font-italic">{{ photo.upload_dt|date:"Y-m-d" }}</li>
+        </ul>
+    </div>
+    {% endfor %}
+</div>
+{% endblock %}
