--- a/photo/templates/photo/album_list.html
+++ b/photo/templates/photo/album_list.html
@@ -1,10 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}album_list.html{% endblock %}
+
+{% block extra-style %}
+<style>
+    .thumbnail {
+    border: 3px solid #ccc;
+    }
+</style>
+{% endblock %}
+
+{% block content %}
+{% for item in object_list %}
+<div class="mt-5">
+    <a class="h2" href="{% url 'photo:album_detail' item.id %}">
+        {{ item.name }}
+    </a>&emsp;
+    <span class="font-italic h5">{{ item.description }}</span>
+</div>
+
+<hr style="margin: 0 0 20px 0;">
+
+<div class="row">
+    {% for photo in item.photo_set.all|slice:":5" %}
+    <div class="col-2"> <!-- or col-md-2, col-lg-2 depending on your grid setup -->
+        <div class="thumbnail">
+            <a href="{{ photo.get_absolute_url }}">
+                <img src="{{ photo.image.thumb_url }}" class="img-fluid" style="width: 100%;">
+            </a>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+
+{% endfor %}
+{% endblock %}
