--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,116 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>{% block title %}Django Web Programming{% endblock %}</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+      {% block extra-style %}{% endblock %}
+  </head>
+
+  <body style="padding-top:90px;">
+
+  <nav class="navbar navbar-expand-lg navbar bg-primary fixed-top">
+  <div class="container-fluid">
+    <span class="navbar-brand" mx-5 mb-0 font-weight-bold font-italic">Django - Python Web Programming</span>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item mx-1 btn btn-primary">
+          <a class="nav-link text-white" href="{% url 'home' %}">Home</a>
+        </li>
+        <li class="nav-item mx-1 btn btn-primary">
+          <a class="nav-link text-white" href="{% url 'marker:index' %}">Marker</a>
+        </li>
+        <li class="nav-item mx-1 btn btn-primary">
+          <a class="nav-link text-white" href="{% url 'blog:index' %}">Blog</a>
+        </li>
+        <li class="nav-item mx-1 btn btn-primary">
+          <a class="nav-link text-white" href="{% url 'photo:index' %}">Photo</a>
+        </li>
+
+        <li class="nav-item dropdown mx-1 btn btn-primary">
+          <a class="nav-link dropdown-toggle text-white" href="#" data-bs-toggle="dropdown">
+            Util
+          </a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a>
+            <a class="dropdown-item" href="{% url 'blog:post_archive' %}">Archive</a>
+            <a class="dropdown-item" href="{% url 'blog:search' %}">Search</a>
+          </div>
+        </li>
+
+       <!-- 메인 메뉴 Add !-->
+        <li class="nav-item dropdown mx-1 btn btn-primary">
+          <a class="nav-link dropdown-toggle text-white" href="#" data-bs-toggle="dropdown">Add</a>
+          <div class="dropdown-menu">
+              <a class="dropdown-item" href="{% url 'marker:add' %}">Marker</a>
+              <a class="dropdown-item" href="{% url 'blog:add' %}">Post</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="">Album</a>
+              <a class="dropdown-item" href="">Photo</a>
+          </div>
+        </li>
+
+          <!-- 메인 메뉴 Change !-->
+        <li class="nav-item dropdown mx-1 btn btn-primary">
+          <a class="nav-link dropdown-toggle text-white" href="#" data-bs-toggle="dropdown">Change</a>
+          <div class="dropdown-menu">
+              <a class="dropdown-item" href="{% url 'marker:change' %}">Marker</a>
+              <a class="dropdown-item" href="{% url 'blog:change' %}">Post</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="">Album</a>
+              <a class="dropdown-item" href="">Photo</a>
+          </div>
+        </li>
+      </ul>
+
+      <form class="form-inline my-2" action="" method="post"> {% csrf_token %}
+        <input class="form-control mr-sm-2" type="search" placeholder="global search" name="search_word">
+      </form>
+
+      <ul class="navbar-nav ml-5 mr-5">
+        <li class="nav-item dropdown mx-1 btn btn-primary">
+            {% if user.is_active %}
+            <a class="nav-link dropdown-toggle text-white" href="#" data-bs-toggle="dropdown">
+                <i class="fas fa-user"></i>&ensp;{% firstof user.get_short_name user.get_username %}&ensp;</a>
+            <div class="dropdown-menu">
+                <form id="logout-form" action="{% url 'logout' %}" method="post" style="display: none;">
+                    {% csrf_token %}
+                </form>
+                <a class="dropdown-item" href="#" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">Logout</a>
+                <a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a>
+            </div>
+            {% else %}
+            <a class="nav-link dropdown-toggle text-white" href="#" data-bs-toggle="dropdown">
+                <i class="fas fa-user"></i>&ensp;Anonymous&ensp;</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="{% url 'login' %}">Login</a>
+                <a class="dropdown-item" href="{% url 'register' %}">Register</a>
+            </div>
+            {% endif %}
+        </li>
+    </ul>
+
+    </div>
+  </div>
+</nav>
+
+  <div class="container">
+    {% block content %}{% endblock %}
+  </div>
+
+  {% block footer %}{% endblock %}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/8e1cab298a.js" crossorigin="anonymous"></script>
+  
+  {% block extra-script %}{% endblock %}
+
+  </body>
 </html>
