--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}logged_out.html{% endblock %}
+
+{% block content %}
+<h1>Logged out</h1>
+<br>
+<div>
+    <i class="fa-solid fa-quote-left"></i>
+    <span class="h6">&ensp;Thanks for spending your quality time with this web site today.&ensp;</span>
+    <i class="fa-solid fa-quote-right"></i>
+</div>
+
+<p class="font-italic"><a href="{% url 'login' %}">Log in again</a></p>
+
+{% endblock %}
