--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}password_change_done.html{% endblock %}
+
+{% block content %}
+<h1>{{ title }}</h1>
+<br>
+<p>Your password was changed!</p>
+{% endblock %}
